--- a/.env.example
+++ b/.env.example
@@ -50,7 +50,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=sonikakurmi48@gmail.com
-MAIL_PASSWORD=zodunojnxyubbbii
+MAIL_PASSWORD=zodunojfgofgnxy
 
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="sonikakurmi48@gmail.com"
@@ -64,9 +64,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-PUSHER_APP_ID=1786104
-PUSHER_APP_KEY=06407b728387e9757157
-PUSHER_APP_SECRET=60c9d33ff0451df2b481
+PUSHER_APP_ID=178435
+PUSHER_APP_KEY=06407b778387e9757895
+PUSHER_APP_SECRET=60c9d33ff0451df2b643
 PUSHER_APP_CLUSTER=ap2
 
 
